--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     min-height: 500px;
-    background-image: url("/fundamentos-web-master/images/header.jpg");
+    background-image: url("header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
